--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,6 +10,8 @@
     "dev": "strapi develop",
     "develop": "strapi develop",
     "seed:example": "node ./scripts/seed.js",
+    "setup:local": "node ./scripts/setup-local-db.js",
+    "setup:permissions": "node ./scripts/setup-permissions.js",
     "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
