--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,8 +1,22 @@
+
+# Server
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
-TRANSFER_TOKEN_SALT=tobemodified
-JWT_SECRET=tobemodified
-ENCRYPTION_KEY=tobemodified
+
+# Secrets
+APP_KEYS=ZSTbidHT2Clw0n5NiuZo1w==,a8/ywz5nZUfV/sPoCI3sSQ==,QnvAgKLqQY4L3RkblAugdg==,s4u2SPrPQSwayoutAVJfYQ==
+API_TOKEN_SALT=xcXma7/wC5O7ksIoLzt03w==
+ADMIN_JWT_SECRET=VSbNjvzU1L0P6+FnGyXm1Q==
+TRANSFER_TOKEN_SALT=kc8/q4gUkJELBNLAlu564A==
+ENCRYPTION_KEY=bUX80jAAn5iIIdRs+pnQTg==
+
+# Database
+DATABASE_CLIENT=mysql
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=3306
+DATABASE_NAME=better_world
+DATABASE_USERNAME=root
+DATABASE_PASSWORD=
+DATABASE_SSL=false
+DATABASE_FILENAME=
+JWT_SECRET=+VtS3KisofHjTl/vI1OIRg==
